--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -43,9 +43,9 @@
         android:id="@+id/eventsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"
+        app:layoutManager="android.support.v7.widget.GridLayoutManager"
+        app:spanCount="3"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:listitem="@layout/event_item">
-    </android.support.v7.widget.RecyclerView>
+        tools:listitem="@layout/event_item"/>
 
 </android.support.design.widget.CoordinatorLayout>
