--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-   android:background="@android:color/white"
+    android:background="@android:color/white"
     android:theme="@style/AppTheme"
-    android:padding="5dp"
-    android:layout_margin="5dp"
+    android:layout_margin="2dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
         android:id="@+id/eventDetailContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
         android:minHeight="30dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/eventDateTextView"
+        android:gravity="top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -40,27 +45,26 @@
 
     <TextView
         android:id="@+id/eventDateTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         style="@style/TextAppearance.AppCompat.Small"
-        android:gravity="center_horizontal"
-        android:text="@string/empty"
-        app:layout_constraintBottom_toTopOf="@id/addButton"
-        app:layout_constraintTop_toBottomOf="@id/eventDetailContainer"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="10dp"
-        />
-
-    <Button
-        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
-        android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="How is it now?"
-        android:tint="@color/colorAccent"
-        android:adjustViewBounds="true"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="10dp"
+        android:text="@string/empty"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/eventDetailContainer"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/addButton"
+        android:layout_margin="4sp"
+        android:layout_width="16sp"
+        android:layout_height="16sp"
+        android:src="@drawable/ic_refresh"
+        android:tint="@color/colorAccent"
+        android:layout_gravity="center_horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 </android.support.constraint.ConstraintLayout>
