--- a/app/src/main/res/layout/activity_event_form.xml
+++ b/app/src/main/res/layout/activity_event_form.xml
@@ -17,6 +17,15 @@
         android:padding="5dp">
 
         <ImageView
+            android:id="@+id/cancelButton"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:padding="5sp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/ic_return"
+            android:tint="@android:color/white" />
+
+        <ImageView
             android:id="@+id/eventImage"
             android:layout_width="45sp"
             android:layout_height="45sp"
@@ -37,21 +46,21 @@
             android:layout_height="0dp"
             android:layout_weight="10" />
 
-        <ImageView
-            android:id="@+id/deleteButton"
-            android:layout_width="30sp"
-            android:layout_height="30sp"
+        <TextView
+            android:id="@+id/okButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:onClick="onDelete"
-            android:padding="5sp"
-            android:src="@drawable/ic_delete"
-            android:tint="@android:color/white" />
+            android:text="DONE"
+            android:textColor="@android:color/white" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="15dp">
 
         <com.ewind.hl.ui.view.EventDatePicker
             android:id="@+id/eventDatePicker"
@@ -71,8 +80,20 @@
             android:id="@+id/eventDetailContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="10"
          />
+
+        <EditText
+            android:id="@+id/noteText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text|textMultiLine"
+            android:hint="Note"/>
+
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="10" />
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/footer"
@@ -80,23 +101,18 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/cancelButton"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@android:string/cancel" />
-
-            <Button
-                android:id="@+id/okButton"
+                android:id="@+id/deleteButton"
                 style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:paddingEnd="10dp"
                 android:paddingStart="15dp"
-                android:text="@android:string/ok" />
+                android:text="Delete" />
 
         </android.support.v7.widget.Toolbar>
+
     </LinearLayout>
+
 
 </LinearLayout>
