--- a/app/src/main/res/layout/event_eye_sight_form.xml
+++ b/app/src/main/res/layout/event_eye_sight_form.xml
@@ -2,8 +2,7 @@
 <com.ewind.hl.ui.view.detail.EyeSightDetailForm xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="15dp">
+    android:orientation="horizontal">
 
     <TextView
         android:layout_width="wrap_content"
