--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -74,10 +74,10 @@
 
     <ImageView
         android:id="@+id/addButton"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_gravity="center_horizontal"
-        android:layout_margin="4dp"
+        android:padding="4dp"
         android:src="@drawable/ic_refresh"
         android:tint="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
