--- a/app/src/main/res/layout/activity_event_form.xml
+++ b/app/src/main/res/layout/activity_event_form.xml
@@ -49,72 +49,17 @@
             android:id="@+id/okButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onDelete"
+            android:onClick="onCancel"
             android:padding="10dp"
             android:text="DONE"
             android:textColor="@android:color/white" />
 
     </LinearLayout>
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/eventFormContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="15dp">
-
-        <com.ewind.hl.ui.view.EventDatePicker
-            android:id="@+id/eventDatePicker"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-             />
-
-        <com.ewind.hl.ui.view.area.AreaSelector
-            android:id="@+id/areaSelector"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingEnd="15dp"
-            android:paddingStart="15dp" />
-
-        <FrameLayout
-            android:id="@+id/eventDetailContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-         />
-
-        <EditText
-            android:id="@+id/noteText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text|textMultiLine"
-            style="@style/AppTheme"
-            android:text="tre"
-            android:hint="Note"/>
-
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="10" />
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/footer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/deleteButton"
-                style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:paddingEnd="10dp"
-                android:paddingStart="15dp"
-                android:text="Delete" />
-
-        </android.support.v7.widget.Toolbar>
-
-    </LinearLayout>
-
+        android:padding="15dp"/>
 
 </LinearLayout>
